--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cpal = "0.13.3"
+rodio = "0.14.0"
 clap = { version = "2.33.3", default-features = false }
-hound = "3.4.0"
 
 tuix = { git = "https://github.com/SonicZentropy/tuix",  rev = "8b3ee66" }
 
@@ -22,7 +21,6 @@ crossbeam-channel = "0.5.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["audiosessiontypes", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "profileapi", "std", "synchapi", "winbase", "winuser"] }
-#asio-sys = { version = "0.2", path = "asio-sys", optional = true }
 num-traits = { version = "0.2.6", optional = true }
 
 [target.'cfg(any(target_os = "linux"))'.dependencies]
