--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rodio = "0.14.0"
+#rodio = "0.14.0"
+
+# welcome back good ol friends
+hound = "3.4.0"
+cpal = "0.13.3"
 clap = { version = "2.33.3", default-features = false }
 
 tuix = { git = "https://github.com/SonicZentropy/tuix",  rev = "8b3ee66" }
