--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -7,9 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#rodio = "0.14.0"
-
-# welcome back good ol friends
 hound = "3.4.0"
 cpal = "0.13.3"
 clap = { version = "2.33.3", default-features = false }
@@ -25,6 +22,7 @@ fern = "0.6.0"
 anyhow = "1.0.40"
 num-traits = "0.2.14"
 crossbeam-channel = "0.5.0"
+once_cell = "1.7.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["audiosessiontypes", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "profileapi", "std", "synchapi", "winbase", "winuser"] }
@@ -35,4 +33,3 @@ alsa = "0.5"
 jack = { version = "0.6.5", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-coreaudio-rs = { version = "0.10.0", default-features = false, features = ["audio_unit", "core_audio"] }
