--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0.40"
 num-traits = "0.2.14"
 crossbeam-channel = "0.5.0"
 once_cell = "1.7.2"
+itertools = "0.10.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["audiosessiontypes", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "profileapi", "std", "synchapi", "winbase", "winuser"] }
