--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+effects = { path = "../effects" }
+
 hound = "3.4.0"
 cpal = "0.13.3"
 clap = { version = "2.33.3", default-features = false }
