--- a/effects/Cargo.toml
+++ b/effects/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["Katherine Philip <katherinephilip98@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+once_cell = "1.7.2"
+num-traits = "0.2.14"
+cpal = "0.13.3"
